--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p{
+  font-size: 1.6rem;
+}
+
+h1{
+  font-size: 6rem;
+}
+
+.App{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4);
+  background: url(./assets/sunset2.jpg) no-repeat center center/cover;
+  background-size:cover;
+  position: absolute;
+  color: white;
+}
+.container {
+  max-width: 700px;
+  height: 700px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.App .top {
+  width: 100%;
+  margin: 1rem auto;
+}
+
+.App .search{
+  text-align: center;
+  padding: 1rem;
+}
+
+.App input{
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(0, 0, 0, 255);
+  background: rgba(255, 255, 255, 0.1)
+}
+
+::placeholder{
+  color: white;
+}
+
+
+.App .bottom {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 0.5rem;
+  border-radius: 5px;
+  background-color: rgba(2,2,2, 0.2);
 }
